<resources>
    <string name="app_name">Calculadora de criptomonedas</string>

    <string name="btn_login">Ingresar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="password">Contraseña</string>
    <string name="user">Correo</string>

    <!--error messages-->
    <string name="error_field_required">Campo requerido</string>
    <string name="error_invalid_email">Correo inválido</string>
    <string name="error_not_find_special_caracter">Debe contener al menos un carácter especial</string>
    <string name="error_not_find_number">Debe contener al menos un número</string>
    <string name="error_not_find_lowercase_caracter">Debe contener al menos una letra</string>
    <string name="error_not_find_uppercase_caracter">Debe contener al menos una letra en mayúscula</string>
    <string name="error_too_short_password">Debe contener entre 8 y 15 caracteres</string>
    <string name="error_email_cant_begin_withspecialcaracter">El correo no puede iniciar con caracteres especiales</string>
    <string name="error_spaces">no puede contener espacios entre caracteres</string>
    <string name="error_triplicate_caracter">No se pueden repetir 3 caracteres seguidos</string>
    <string name="error_init_empty">No puede iniciar con espacios en blanco</string>
    <string name="error_init_number">No puede iniciar con un número</string>
    <string name="error_final_empty">No puede tener espacios en blanco al final</string>
    <string name="error_save">Error al guardar datos</string>
    <string name="try_again">Intente nuevamente</string>
    <string name="action_calculate">calcular</string>
    <string name="insert_information">Inserte el monto a calcular</string>
    <string name="error_remote">Error al recibir data, presione aceptar para intentar nuevamente</string>
    <string name="message_error_remote_data">No se han podido obtener los datos</string>
    <string name="insert_value">Inserte la cantidad a calcular</string>
    <string name="error_getting_data">No se pudo obtener los datos, se intentara nuevamente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operation">Currency type</string>
    <string name="null_value">-</string>
    <string name="read_action">Leer Qr</string>
    <string name="logout">Cerrar sesion</string>
    <string name="error_permission">error de permiso</string>
    <string name="mensaje_permission">Debe aceptar el permiso para continuar con esta accion</string>
    <string name="action_recalculate">Recalcular</string>
    <string name="calculator">Calculadora</string>
    <string name="login">Inicio de sesion</string>
    <string name="read_qr">Lector QR</string>
    <string name="close_sesion">Cerrar Sesion</string>
    <string name="close_session_message">¿Esta seguro que desea cerrar sesion?</string>
</resources>